# ratingcurve

./: .buildinfo  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  api.html  code.json  environment.yml  experimental.py  genindex.html  index.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: review-checklist.md
.github/workflows/: deploy-book.yml  pylint.yml  python-package.yml  release.yml
_modules/: index.html
_modules/ratingcurve/: data.html  plot.html  ratingmodel.html  ratingmodel_builder.html  ratings.html  sklearn.html  transform.html
_sources/meta/: background.md  implementation.md  intro.md  troubleshooting.md
_sources/notebooks/: getting-started-tutorial.ipynb  getting-started.ipynb  model-evaluation-demo.ipynb  spline-demo.ipynb  (+4 more)
data/: chalk_artificial.csv  provo_natural.csv  rating_data_catalog.yml  simulated_rating.csv
docs/: _config.yml  _toc.yml  api.rst  requirements-doc.txt
examples/: print_equation.py
meta/: background.html  implementation.html  installation.html  intro.html  troubleshooting.html  tutorials.html
notebooks/: BrokenPowerLaw_Example.ipynb  ModelBuilder_BrokenPowerLaw.ipynb  ModelBuilder_PowerLaw.ipynb  ModelBuilder_SmoothPowerLaw.ipynb  ModelBuilder_Spline.ipynb  PowerLaw_model_funcs.ipynb  SmoothPowerLaw_Example.ipynb  cherry_blossom.ipynb  getting-started-tutorial.html  getting-started.html  model-evaluation-demo.html  model-evaluation-demo.ipynb  model-selection-tutorial.html  plotting.py  ratingmodel.py  segment_normal_priors.ipynb  segment_sorted_prior.ipynb  segment_test-priors.ipynb  segmented-power-law-demo.html  segmented-power-law-demo.ipynb  segmented-power-law-tutorial.html  segmented_power_law_demo.ipynb  spline-demo.html  spline-tutorial.html  spline_demo.ipynb  spline_test.ipynb  transforms.py
notebooks_old/: !01_bayesian_model.ipynb  01_single_control.ipynb  01_single_control_offset.ipynb  01_single_control_offset_unstd.ipynb  02_single_control_offset_switch_unstd.ipynb  03_neural_net_v1.ipynb  04_neural_net_v2.ipynb  04_neural_net_v3.ipynb  04_neural_net_v4.ipynb  Untitled.ipynb  lessons.ipynb
ratingcurve/: __init__.py  _version.py  experimental.py  experimental_ratings.py  model_builder.py  modelbuilder_base.py  modelbuilder_experimental.py  modelbuilder_plot.py  modelbuilder_ratings.py  plot.py  plotting.py  ratingmodel copy.py  ratingmodel.py  ratingmodel_builder.py  ratings.py  sklearn.py  transform.py  transforms.py  tutorial.py
(+49 files in other folders)
