[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ratingcurve"
description = "A library for fitting multi-segment stage-discharge rating curves."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["USGS", "streamflow", "rating curve"]
license = {file = "LICENSE.md"}
maintainers = [
  {name = "Timothy Hodson", email = "thodson@usgs.gov"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pymc >= 5.0.0",
    "patsy",
    "aiohttp",
    "intake"
]

dynamic = ["version"]

[tool.setuptools]
packages = ["ratingcurve"]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
homepage = "https://github.com/thodson-usgs/ratingcurve"
repository = "https://github.com/thodson-usgs/ratingcurve.git"

[tool.setuptools_scm]
