[metadata]
name = ratingcurve
version = 0.1.0
author = Timothy O. Hodson
author_email = thodson@usgs.gov
description = A package for fitting streamflow ratings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thodson-usgs/ratingcurve
project_urls =
    Bug Tracker = https://github.com/thodson-usgs/ratingcurve/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication 
    Operating System :: OS Independent
    

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp
    intake
    patsy
    pymc>=4.1.1

    
[options.packages.find]
where = src

